# neuronos

./: .gitignore  CMakeLists.txt  README.md  install.sh
.github/workflows/: build.yml  ci.yml  release.yml
grammars/: json.gbnf  tool_call.gbnf
include/: gemm-config.h
neuronos/: .gitignore  CMakeLists.txt  mcp.json
neuronos/include/neuronos/: neuronos.h  neuronos_hal.h  neuronos_json.h  neuronos_model_registry.h
neuronos/scripts/: embed_webui.py
neuronos/src/agent/: neuronos_agent.c  neuronos_tool_registry.c
neuronos/src/cli/: neuronos_cli.c
neuronos/src/engine/: neuronos_engine.c  neuronos_model_registry.c  neuronos_model_selector.c
neuronos/src/hal/: hal_arm_neon.c  hal_registry.c  hal_vulkan.c  hal_x86_avx2.c  hal_x86_avxvnni.c
neuronos/src/interface/: neuronos_chat_ui.h  neuronos_server.c
neuronos/src/mcp/: neuronos_mcp_client.c  neuronos_mcp_server.c
neuronos/src/memory/: neuronos_memory.c
neuronos/src/util/: neuronos_json.c
neuronos/tests/: test_engine.c  test_hal.c  test_json.c  test_memory.c
neuronos/wasm/: CMakeLists.txt  WASM_ARCHITECTURE.md  build_wasm.sh  neuronos-inference-worker.js  neuronos-web.js  neuronos_wasm_glue.c  playground.html
neuronos/webui/: index.html
scripts/: create-release.sh  install.sh  package-release.sh
src/: README.md  ggml-bitnet-mad.cpp
